qhints-rs/check.err
    Checking qhints-rs v0.1.0 (/home/yogi/qhints/qhints-rs)
error[E0433]: cannot find `CoordType` in `accessible`
   --> src/backend/atspi.rs:130:68
    |
130 | ...e::CoordType::S...
    |       ^^^^^^^^^ could not find `CoordType` in `accessible`

warning: unused import: `cairo::Context`
 --> src/overlay/mod.rs:5:5
  |
5 | use cairo::Context;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
  --> src/backend/atspi.rs:43:17
   |
43 | ...et (app_dest, app_path) = desktop.get...?;
   |       ^^^^^^^^^^^^^^^^^^^^   -----------...- this expression has type `ObjectRef`
   |       |
   |       expected `ObjectRef`, found `(_, _)`
   |
   = note: expected struct `atspi_common::ObjectRef`
               found tuple `(_, _)`
   = note: the full name for the type has been written to '/home/yogi/qhints/qhints-rs/target/debug/deps/qhints_rs-8f5333a1cb4efaf6.long-type-3152038039509057260.txt'
   = note: consider using `--verbose` to print the full type name to the console

error[E0308]: mismatched types
  --> src/backend/atspi.rs:59:21
   |
59 | ...et (win_dest, win_path) = app_proxy.get_child_at_index(win_idx).await?;
   |       ^^^^^^^^^^^^^^^^^^^^   ---------------...is expression has type `ObjectRef`
   |       |
   |       expected `ObjectRef`, found `(_, _)`
   |
   = note: expected struct `atspi_common::ObjectRef`
               found tuple `(_, _)`
   = note: the full name for the type has been written to '/home/yogi/qhints/qhints-rs/target/debug/deps/qhints_rs-8f5333a1cb4efaf6.long-type-3152038039509057260.txt'
   = note: consider using `--verbose` to print the full type name to the console

error[E0599]: no method named `len` found for struct `StateSet` in the current scope
  --> src/backend/atspi.rs:75:39
   |
75 | ...te.len() >= 1...
   |       ^^^ method not found in `StateSet`
   |
   = note: the full name for the type has been written to '/home/yogi/qhints/qhints-rs/target/debug/deps/qhints_rs-8f5333a1cb4efaf6.long-type-10916423324115538034.txt'
   = note: consider using `--verbose` to print the full type name to the console

error[E0608]: cannot index into a value of type `atspi_common::StateSet`
  --> src/backend/atspi.rs:75:59
   |
75 | ...state[0] & (1...
   |         ^^^

error[E0308]: mismatched types
   --> src/backend/atspi.rs:110:17
    |
110 |               let (dest, path) = matc...
    |  _________________^^^^^^^^^^^^___-
    | |                 |
    | |                 expected `ObjectRef`, found `(_, _)`
111 | |                 Ok(v) => v,
112 | |                 Err(_) => continue,
113 | |             };
    | |_____________- this expression has type `ObjectRef`
    |
    = note: expected struct `atspi_common::ObjectRef`
                found tuple `(_, _)`
    = note: the full name for the type has been written to '/home/yogi/qhints/qhints-rs/target/debug/deps/qhints_rs-8f5333a1cb4efaf6.long-type-3152038039509057260.txt'
    = note: consider using `--verbose` to print the full type name to the console

error[E0599]: no method named `get_extents` found for struct `AccessibleProxy<'p>` in the current scope
   --> src/backend/atspi.rs:130:29
    |
130 | ...xy.get_extents(at...
    |       ^^^^^^^^^^^ method not found in `AccessibleProxy<'_>`

error[E0034]: multiple applicable items in scope
  --> src/overlay/mod.rs:54:34
   |
54 | ...ow.screen() {
   |       ^^^^^^ multiple `screen` found
   |
   = note: candidate #1 is defined in an impl of the trait `gtk::prelude::GtkWindowExt` for the type `O`
   = note: candidate #2 is defined in an impl of the trait `gtk::prelude::WidgetExt` for the type `O`
help: disambiguate the method for candidate #1
   |
54 -     if let Some(screen) = window.screen() {
54 +     if let Some(screen) = gtk::prelude::GtkWindowExt::screen(&window) {
   |
help: disambiguate the method for candidate #2
   |
54 -     if let Some(screen) = window.screen() {
54 +     if let Some(screen) = gtk::prelude::WidgetExt::screen(&window) {
   |

error[E0308]: mismatched types
  --> src/overlay/mod.rs:80:29
   |
80 | ...   drawing::draw_hints(cr, &...
   |       ------------------- ^^ expected `cairo::Context`, found `gdk::cairo::Context`
   |       |
   |       arguments to this function are incorrect
   |
note: there are multiple different versions of crate `cairo` in the dependency graph
  --> /home/yogi/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/cairo-rs-0.20.12/src/context.rs:57:1
   |
57 | pub struct Context(pt...
   | ^^^^^^^^^^^^^^^^^^ this is the expected type
   |
  ::: /home/yogi/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/cairo-rs-0.18.5/src/context.rs:64:1
   |
64 | pub struct Context(pt...
   | ------------------ this is the found type
   = help: you can use `cargo tree` to explore your dependency tree
note: function defined here
  --> src/overlay/drawing.rs:7:8
   |
 7 | pub fn draw_hints(
   |        ^^^^^^^^^^
 8 |     cr: &Context,
   |     ------------

error[E0425]: cannot find function, tuple struct or tuple variant `Inhibit` in this scope
  --> src/overlay/mod.rs:81:9
   |
81 | ...   Inhibit(fa...
   |       ^^^^^^^ not found in this scope

error[E0599]: no method named `into_glib` found for struct `gdk::keys::Key` in the current scope
   --> src/overlay/mod.rs:95:19
    |
 95 | ...al.into_glib() ...
    |       ^^^^^^^^^
    |
   ::: /home/yogi/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/glib-0.18.5/src/translate.rs:330:8
    |
330 | ...fn into_glib(se...
    |       --------- the method is available for `gdk::keys::Key` here
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `IntoGlib` which provides `into_glib` is implemented but not in scope; perhaps you want to import it
    |
  1 + use gdk::glib::translate::IntoGlib;
    |
help: there is a method `to_le` with a similar name
    |
 95 -         if keyval.into_glib() as u32 == st.config.exit_key {
 95 +         if keyval.to_le() as u32 == st.config.exit_key {
    |

error[E0425]: cannot find function, tuple struct or tuple variant `Inhibit` in this scope
  --> src/overlay/mod.rs:97:20
   |
97 | ...rn Inhibit(tr...
   |       ^^^^^^^ not found in this scope

error[E0425]: cannot find function, tuple struct or tuple variant `Inhibit` in this scope
   --> src/overlay/mod.rs:132:24
    |
132 | ...rn Inhibit(tr...
    |       ^^^^^^^ not found in this scope

error[E0425]: cannot find function, tuple struct or tuple variant `Inhibit` in this scope
   --> src/overlay/mod.rs:147:9
    |
147 | ...   Inhibit(true)
    |       ^^^^^^^ not found in this scope

error[E0308]: mismatched types
   --> src/overlay/mod.rs:162:17
    |
156 | ...et _ = seat.grab(
    |                ---- arguments to this method are incorrect
...
162 | ...   None::<&dy...)>,
    |       ^^^^^^^^^^...^^ types differ in mutability
    |
    = note: expected enum `Option<...>`
               found enum `Option<&...>`
note: method defined here
   --> /home/yogi/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/gdk-0.18.2/src/auto/seat.rs:72:8
    |
 72 |     fn grab(
    |        ^^^^
    = note: the full name for the type has been written to '/home/yogi/qhints/qhints-rs/target/debug/deps/qhints_rs-8f5333a1cb4efaf6.long-type-16103403846908215166.txt'
    = note: consider using `--verbose` to print the full type name to the console

error[E0599]: no method named `focused_window` found for struct `x11::X11` in the current scope
  --> src/main.rs:65:23
   |
65 | ...ws.focused_window()....
   |       ^^^^^^^^^^^^^^ method not found in `x11::X11`
   |
  ::: src/window_system/mod.rs:17:8
   |
17 | ...fn focused_window(&s...
   |       -------------- the method is available for `x11::X11` here
   |
  ::: src/window_system/x11.rs:7:1
   |
 7 | pub struct X11 {
   | -------------- method `focused_window` not found for this struct
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `WindowSystem` which provides `focused_window` is implemented but not in scope; perhaps you want to import it
   |
 1 + use crate::window_system::WindowSystem;
   |

Some errors have detailed explanations: E0034, E0308, E0425, E0433, E0599, E0608.
For more information about an error, try `rustc --explain E0034`.
warning: `qhints-rs` (bin "qhints-rs") generated 1 warning
error: could not compile `qhints-rs` (bin "qhints-rs") due to 16 previous errors; 1 warning emitted
